# df-healthbench

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  project_completion.md  project_overview.md  sprint_plan_1.md  sprint_plan_3.md  sprint_plan_5.md  sprint_plan_6.md  sprint_plan_7.md
add_docs/: DEVELOPMENT.md  testing.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  init_pgvector.sql  pyproject.toml  test_db_setup.py  test_extraction_request.json  verify_imports.py
backend/app/: config.py  database.py  main.py  seed.py
backend/app/api/routes/: __init__.py  documents.py  extraction.py  fhir.py  health.py  llm.py  llm_helpers.py  rag.py
backend/app/crud/: __init__.py  document.py  document_summary.py  embedding.py
backend/app/models/: __init__.py  document.py  document_embedding.py  document_summary.py
backend/app/prompts/: __init__.py  agent_extraction.yaml
backend/app/schemas/: __init__.py  document.py  extraction.py  fhir.py  llm.py  rag.py
backend/app/services/: __init__.py  agent_extraction.py  chunking.py  document.py  embedding.py  fhir_conversion.py  llm.py  rag.py
backend/notebooks/: agent_extraction_prototype.ipynb  test_openai_debug.ipynb
backend/sprints/: sprint_plan_4.md
backend/tests/: RAG_API_TESTING.md  README_TESTS.md  conftest.py  extraction_result.json  test_agent_extraction_api.py  test_agent_tools.py  test_backend_foundation.py  test_crud_operations.py  test_crud_service.py  test_embedding_chunking.py  test_extraction_by_id.py  test_fhir_conversion.py  test_llm_integration.py  test_openai_debug.ipynb  test_part1_complete.py  test_pgvector_setup.py  test_rag_pipeline.py
med_docs/policy/: overview.md
med_docs/soap/: soap_01.txt  soap_02.txt  soap_04.txt  soap_05.txt  soap_06.txt  soap_07.txt  soap_08.txt  soap_09.txt  soap_10.txt  soap_11.txt  soap_12.txt
soap/: soap_01.txt  soap_03.txt  soap_05.txt
sprints/: sprint_plan_2.md  sprint_plan_8.md  sprint_plan_9.md
