[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^7.1.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"

[project]
name = "df-backend"
version = "0.1.0"
description = "DF HealthBench Backend API"
authors = [
    {name = "Ryan Kennedy"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.122.0,<0.123.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "openai (>=2.8.1,<3.0.0)",
    "pgvector (>=0.3.6,<0.4.0)",
    "pypdf (>=5.1.0,<6.0.0)",
    "openai-agents (>=0.6.1,<0.7.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "fhir-resources (>=8.1.0,<9.0.0)",
    "pyyaml (>=6.0.0,<7.0.0)"
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
